--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 
 	<header>
 		<h1>Discover hidden places in the world around you</h1>
+		<a href="">Download Excursion (Coming Soon!)</a>
 	</header>
+
+
+	<div class="presentation">
+		<h2>Your personal travel guide</h2>
+		<h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
+	</div>
+
+
+	<div class="mobile-app">
+		<h2>Coming soon for Iphone and Android</h2>		
+		<a href="">Download Excursion (Coming Soon!)</a>
+	</div>
+
+
+	<footer>
+		<p>&copy; Excursion</p>
+	</footer>>
 
 </body>
 
