--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
 	<header>
 		<h1>Discover hidden places in the world around you</h1>
 		<a href="">Download Excursion (Coming Soon!)</a>
+		<br>
+		<video autoplay controls loop>
+		  <source src="./resources/videos/excursion.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+		
+
 	</header>
 
 
 	<div class="presentation">
 		<h2>Your personal travel guide</h2>
 		<h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
+		<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
 	</div>
 
+	<br>
 
 	<div class="mobile-app">
+		<img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
 		<h2>Coming soon for Iphone and Android</h2>		
 		<a href="">Download Excursion (Coming Soon!)</a>
 	</div>
