--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<h1>Discover hidden places in the world around you</h1>
 		<a href="">Download Excursion (Coming Soon!)</a>
 		<br>
-		<video autoplay controls loop>
-		  <source src="./resources/videos/excursion.mp4" type="video/mp4">
+		<video autoplay loop>
+		  <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
 		
